--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-07  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* frame.c (get_frame_param): Define only if HAVE_WINDOW_SYSTEM.
+
 	* lisp.h: Remove empty conditional.
 
 2012-07-07  Paul Eggert  <eggert@cs.ucla.edu>
