--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-08  Juanma Barranquero  <lekktu@gmail.com>
+
+	* tutorials/TUTORIAL.es: Sync with changes in revno:108936.
+
 2012-07-07  Michael Witten  <mfwitten@gmail.com>  (tiny change)
 
 	* tutorials/TUTORIAL: Copyedits (Bug#11689).
