--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-09  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Add GCC-style 'const' attribute to functions that can use it.
+	* configure.ac (WARN_CFLAGS): Add -Wsuggest-attribute=const.
+	(ATTRIBUTE_CONST): New macro, in config.h.
+
 2012-07-09  Juanma Barranquero  <lekktu@gmail.com>
 
 	* lib/makefile.w32-in: Rework dependencies.
