--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-09  Glenn Morris  <rgm@gnu.org>
+
+	* nsterm.m, nsterm.h (ns_etc_directory): Fix type, empty return.
+
 2012-07-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* process.c (wait_reading_process_output): 'waitchannels' was unset
