--- a/lisp/cedet/ChangeLog
+++ b/lisp/cedet/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-09  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* ede/project-am.el: Fix typo.
+
 2012-07-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Rename configure.in to configure.ac (Bug#11603).
